# Telegram-Bot-For-Events

./: README.md  base.db  main.py  pyproject.toml
app/: app.py  config.py
app/admin_panel_router/: admin_panel.py  dependencies.py
app/admin_panel_router/templates/: events.html  exhibition_applies.html  index.html  login.html  partner_applies.html  qr.html  registrations.html  users.html
app/admin_panel_router/templates/examples/: login.html
app/admin_panel_router/templates/tables/: simple.html
app/api_router/: api.py  schemas.py
app/api_router/modules/: __init__.py  admins.py  events.py  user.py
app/database/: engine.py  models.py
app/database/queries/: __init__.py  admin.py  events.py  exhibition_aplycation.py  partner_aplication.py  payment.py  registration.py  user.py
app/tg_bot_router/: bot.py
app/utils/: admin_permision.py  security.py
